- Suballocate filename in TDBMUL::InitFileNames. This fix the bug   MDEV-4524 but I still don't know why it happened with a stack variable.   (and only on Linux)

modified:
  storage/connect/tabmul.cpp